[package]
name = "tellmewhy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line prompting"
homepage = "https://github.com/b3nj5m1n/tellmewhy"
repository = "https://github.com/b3nj5m1n/tellmewhy"
keywords = ["cli", "terminal", "prompt", "input"]
categories = ["command-line-interface"]

[lib]
name = "tellmewhy"
path = "src/lib.rs"

[[bin]]
name = "tellmewhy-bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
crossterm = "0.26.1"
unicode-width = "0.1.10"

[dev-dependencies]
pretty_assertions = "1.3.0"
